<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="21dp"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/preferencias"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:layout_margin="16dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unidadeMedida"
        android:layout_marginTop="-8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:textStyle="bold" />


    <RadioGroup
        android:id="@+id/radioGroupMetric"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/radioCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:text="@string/celsius" />

        <RadioButton
            android:id="@+id/radioFah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textSize="16sp"
            android:text="@string/fahrenheit" />

    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#fa000000"/>

</LinearLayout>